# soda-ui-zijin

./: AGENTS.md  LEROBOT_FORMAT.md  RECORDING.md  test.ipynb  test_images_reader.py
soda_os/: __init__.py  main.py  pyproject.toml
soda_os/config/: __init__.py  manager.py
soda_os/controllers/: __init__.py  base.py  quest_vio.py
soda_os/core/: __init__.py  analytic_ik.py  calibration.py  control.py  dynamics.py  kinematics.py  planning.py  transforms.py
soda_os/data/: __init__.py  trajectory_recorder.py
soda_os/drivers/: __init__.py  base.py  real_driver.py  sim_driver.py
soda_os/recording/: __init__.py  hdf5_replay_manager.py
soda_os/services/: __init__.py  camera_service.py  dual_arm_service.py  robot_service.py  test_services_sim.py
soda_os/shell/: __init__.py  server.py
soda_os/shell/routes/: __init__.py  camera.py  robot.py
soda_os/shell/schemas/: __init__.py  camera.py  robot.py
soda_os/shell/websockets/: __init__.py  control.py  legacy.py  state.py  teleop.py
soda_server/: .gitignore  MUJOCO_LOG.TXT  TEST_RECORDING.md  Wheat_Alsen_F6_2023-06-30-1836_fused_output_cluster_2.npy  data_logger.py  data_reader.py  main.py  mujoco_manager.py  pyproject.toml  replay_manager.py  robot_interface.py  rrd_reader.py  test_images_reader_internal.py  test_recording.duckdb  test_recording.py  urdf_logger.py
soda_server/public/firefly_y6_gr100/: firefly_y6_gr100.urdf
soda_server/public/gp100/: xpkg_urdf_gp100.urdf
soda_server/public/l6y_gp100/: gp100_link_2.STL  gp100_link_3.STL  gp100_link_camera.STL  l6y_gp100.urdf  l6y_gp100.xml  link_5.STL  (+1 more)
(+78 files in other folders)
