[project]
name = "soda-os"
version = "0.1.0"
description = "SODA OS - Robot Operating System for HexArm"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "SODA Team"},
]

dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    # "pinocchio>=2.6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["soda_os*"]
