[project]
name = "soda-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "opencv-python>=4.12.0.88",
    "aiohttp-cors>=0.7.0",
    "mujoco>=3.0.0",
    "mediapy>=1.2.4",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "urdf-parser-py>=0.0.4",
    "trimesh>=4.0.0",
    "pillow>=10.0.0",
    "hex-zmq-servers>=0.3.15",
    "msgpack>=1.0.8",
    "duckdb>=1.4.3",
    "pandas>=2.3.3",
    "moviepy>=2.2.1",
    "pyarrow>=22.0.0",
]
